# abigen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
abigen/: CMakeLists.txt
abigen/src/: main.cpp
cmake/: cxxcommon.cmake  globalsettings.cmake
mcsema_tests/: CMakeLists.txt  mcsema_tests_zlib.c
src/: abi_lib_generator.cpp  abi_lib_generator.h  astvisitor.cpp  astvisitor.h  cmdline.cpp  cmdline.h  compile_command.cpp  compilerinstance.cpp  compilerinstance.h  generate_command.cpp  generate_command.h  generate_utils.cpp  generate_utils.h  istatus.h  languagemanager.cpp  languagemanager.h  list_commands.cpp  main.cpp  profilemanager.cpp  profilemanager.h  std_filesystem.h  types.h  version_command.cpp
srcparser/: CMakeLists.txt
srcparser/include/trailofbits/srcparser/: isourcecodeparser.h  istatus.h  macros.h
srcparser/src/: asttypecollector.cpp  asttypecollector.h  astvisitor.cpp  astvisitor.h  llvm_compatibility.h  sourcecodeparser.cpp  sourcecodeparser.h  translationunithandler.cpp  translationunithandler.h
tests/: simple.cpp
